# Uno

./: .gitmodules  CMakeLists.txt  README.md  changelog.md  hello.proto  hello_server.cc  notes.md
.github/workflows/: release.yml  testing.yml
lib/: CMakeLists.txt
src/: CMakeLists.txt  event.cc  event.h  event_loop.cc  event_loop.h  logger.h  main.cpp  state.cc  state.h  state_machine.cc  state_machine.h  uno_client.cc  uno_server.cc
src/common/: event_listener.cc  event_listener.h  event_loop.cc  event_loop.h  game_manager.h  network_interface.cc  network_interface.h  state_machine.h  types.h  util.cc  util.h
src/game/: card.cc  card.h  config.cc  config.h  event.cc  event.h  event_listener.cc  event_listener.h  game_manager.cc  game_manager.h  msg_builder.cc  msg_builder.h  state.cc  state.h  state_machine.cc  util.cc  util.h
src/game/client_side/: event_c.cc  game_manager_c.cc  game_manager_c.h  state_c.cc  state_c.h
src/game/server_side/: event_s.cc  game_manager_s.cc  game_manager_s.h  state_s.h
src/network/: client.cc  client.h  server.cc  server.h
src/ui/: ui_manager.h
test/: CMakeLists.txt  mockcore_test.cc
